--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,26 @@
 *.obj
 *.idb
 *.pdb
+.vs/
+.64
+*.pdb
+*.idb
+*.obj
+*.lastbuildstate
+*.txt
+x64/Debug/vc142.pdb
+x64/Debug/vc142.idb
+x64/Debug/Main.obj
+x64/Debug/LinkedList.vcxproj.FileListAbsolute.txt
+x64/Debug/LinkedList.tlog/LinkedList.lastbuildstate
+x64/Debug/LinkedList.tlog/link.write.1.tlog
+x64/Debug/LinkedList.tlog/link.read.2.tlog
+x64/Debug/LinkedList.tlog/link.command.1.tlog
+x64/Debug/LinkedList.tlog/CL.write.1.tlog
+x64/Debug/LinkedList.tlog/CL.read.1.tlog
+x64/Debug/LinkedList.tlog/CL.command.1.tlog
+x64/Debug/LinkedList.pdb
+x64/Debug/LinkedList.log
+x64/Debug/LinkedList.ilk
+x64/Debug/LinkedList.exe.recipe
+x64/Debug/LinkedList.exe
